tests/tests2/69_macro_param_list_err_2.expect
69_macro_param_list_err_2.c:2: error: '/' may not appear in parameter list
